2012-03-29  Corinna Vinschen  <vinschen@redhat.com>

	* libc/locale/locale.c (__mb_cur_max): On Cygwin, align default value
	with default UTF-8 charset.

2012-03-26  Corinna Vinschen  <vinschen@redhat.com>

	* libc/stdio/findfp.c (__sinit): Set __sdidinit last.

2012-03-09  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/machine/setjmp-dj.h: Modify license to include
	modification in clause as permitted by DJ Delorie.
	* libc/machine/arm/access.c: Ditto.
	* libc/machine/i386/setjmp.S: Ditto.
	* libc/sys/h8300hms/sys/file.h: Ditto.
	* libc/sys/linux/machine/i386/setjmp.S: Ditto.
	* libc/sys/sysmec/access.c: Ditto.
	* libc/sys/sysnecv850/access.c: Ditto.

2012-03-02  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/posix/readdir_r.c: Fix return code when end of
	directory is reached.

2012-02-23  Dan Egnor  <egnor@ofb.net>

	* configure.host: Accept "arm*" host spec instead of just "arm".

2012-02-21  Jeremy Bennett  <jeremy.bennett@embecosm.com>
            Alan Lehotsky  <apl@alum.mit.edu>
            Joern Rennecke  <joern.rennecke@embecosm.com>

	* configure.host: Add Epiphany support.
	* libc/include/machine/ieeefp.h: Likewise.
	* libc/include/machine/setjmp.h: Likewise.
	* libc/machine/configure.in, libc/sys/configure.in: Likewise.
	* libc/machine/configure, libc/sys/configure: Regenerate.
	* libc/machine/epiphany, libc/sys/epiphany: New directories.
	* NEWS: Mention addition of Epiphany.

2012-02-15  Christopher Faylor  <me.newlib2012@cgf.cx>

	* configure.host: Fix typo: xdir_dir -> xdr_dir.

2012-02-09  Eric Blake  <eblake@redhat.com>

	* libc/include/_ansi.h (_ELIDABLE_INLINE): Fix C99 mode.

2012-02-09  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/sys/rtems/sys/utime.h: Include <sys/types.h> to provide a
	definition of time_t.

2012-02-08  Greta Yorsh  <Greta.Yorsh@arm.com>

	* libc/machine/arm/strcmp.S: New File.
	* libc/machine/arm/strcmp.c: Deleted.
	* libc/machine/arm/Makefile.am: Replaces strcmp.c with strcmp.S